# Semestr_2_practice

./: README.md
Laboratory/LaboratoryWork2/: CMakeLists.txt  main.cpp
Laboratory/Laboratory_Work_1/: CMakeLists.txt
Laboratory/Laboratory_Work_3/: CMakeLists.txt  main.cpp
Laboratory/Laboratory_Work_4/: CMakeLists.txt  main.cpp
Laboratory/Laboratory_Work_5/: CMakeLists.txt  main.cpp
Laboratory/Laboratory_Work_6/: CMakeLists.txt  Log.cpp  Log.h  main.cpp
Laboratory/Laboratory_Work_7/: CMakeLists.txt  main.cpp
Laboratory/Laboratory_Work_8/: CMakeLists.txt  Stack.h  main.cpp
Laboratory/Laborotory_Work_1/: Text.h  main.cpp
pactice/task_1/: Key.txt  Message.txt  ShMessage.txt
pactice/task_2/: main.cpp
task_1/: head.hpp  main.cpp
